--- a/help.html
+++ b/help.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SELF · Helpful Tools</title>
+    <title>SELF · Media</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -16,7 +16,7 @@
         <nav>
             <a href="index.html">Home</a>
             <a href="tracklist.html">Playlist</a>
-            <a href="help.html">Helpful Tools</a>
+            <a href="help.html">Media</a>
             <a href="recommendations.html">Recommendations</a>
         </nav>
     </header>
