--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav>
             <a href="index.html">Home</a>
             <a href="tracklist.html">Playlist</a>
-            <a href="help.html">Helpful Tools</a>
+            <a href="help.html">Media</a>
             <a href="recommendations.html">Recommendations</a>
         </nav>
     </header>
