--- a/tracklist.html
+++ b/tracklist.html
@@ -16,17 +16,20 @@
         <nav>
             <a href="index.html">Home</a>
             <a href="tracklist.html">Playlist</a>
-            <a href="help.html">Helpful Tools</a>
+            <a href="help.html">Media</a>
             <a href="recommendations.html">Recommendations</a>
         </nav>
     </header>
 
     <main>
 
+        <p><i>*You can navigate to any song by clicking on the album cover.</i></p>
+
         <div class="track">
             <a href="https://open.spotify.com/playlist/0J2ZEWTzSlYikVtd5M0yNz" target="_blank"><img src="images/tracks/playlist.png" alt="Self Improvement - Grady Algire"></a>
             <div class="track-content">
                 <h2>You can find the playlist on Spotify <a href="https://open.spotify.com/playlist/0J2ZEWTzSlYikVtd5M0yNz" target="_blank">here</a>.</h2><br>
+                <p>You do not need to connect with every song here. Choose the ones that resonate with you and stick with them. If you find a song that supports your growth and isn't on this playlist, submit a new song request on the recommendations page for consideration.</p>
                 <p><i>*Tracklist subject to change as the project evolves.</i></p>
             </div>
         </div>
@@ -35,23 +38,23 @@
             <a href="https://open.spotify.com/album/2jHVzEpvZ8gV5zn5IywmRB" target="_blank"><img src="images/tracks/track1_TheMountainIsYou.png" alt="The Mountain Is You - Chance Peña"></a>
             <div class="track-content">
                 <h2>The Mountain Is You - Chance Peña</h2><br>
-                <p>The biggest thing standing in your way is not the world, other people, or bad luck. It is the fear, doubt, and hesitation you carry inside. When you see yourself as the obstacle, or "The Mountain", you stop waiting for circumstances to change and start changing how you respond. This mindset helps you rebuild by shifting focus from blame to ownership, without turning that ownership into self-punishment. You learn that growth comes from facing discomfort, letting go of what holds you back, and continuing forward even when confidence wavers. By recognizing that you are also the one capable of climbing, you regain control, build self-trust, and turn inner resistance into progress.</p>
+                <p>The biggest thing standing in your way is not the world, other people, or bad luck. It is the fear, doubt, and hesitation you carry inside. When you see yourself as the obstacle, or "The Mountain", you stop waiting for circumstances to change and start changing how you respond. Shift your focus from blame to ownership without turning that ownership into self-punishment. Growth comes from facing discomfort, letting go of what holds you back, and continuing forward even when your confidence is low. By recognizing that you are also the one capable of climbing The Mountain, you regain control and turn inner resistance into progress.</p>
             </div>
         </div>
 
-        <div class="track">
+        <!-- <div class="track">
             <a href="https://open.spotify.com/album/0zIb6xazDd72sVT8OtPX3E" target="_blank"><img src="images/tracks/track2_Home.png" alt="Home - Phillip Phillips"></a>
             <div class="track-content">
                 <h2>Home - Phillip Phillips</h2><br>
                 <p>Slow down. Breathe. Trust that uncertainty does not mean danger. You are reminded that you do not have to face change alone and that feeling lost is a normal part of moving forward. The mindset this builds is calm resilience. Choose steadiness over panic and reassurance over fear. By focusing on safety, belonging, and patience, you are given space to rebuild without rushing or forcing answers. This helps you heal by quieting anxious thoughts, strengthening emotional stability, and reinforcing that progress often begins with feeling supported and grounded rather than pushed.</p>
             </div>
-        </div>
+        </div> -->
 
         <div class="track">
             <a href="https://open.spotify.com/track/2A1FGotEDhN5UjBiLsUwnk" target="_blank"><img src="images/tracks/track3_SleepDeprevation.png" alt="Sleep Deprevation - Chance Peña"></a>
             <div class="track-content">
                 <h2>Sleep Deprevation - Chance Peña</h2><br>
-                <p>Feeling exhausted, uncertain, and pulled in different directions does not mean you are failing. It means you are growing. Slow your thinking and round yourself in the fact that you are still here. Take life in manageable pieces instead of trying to solve everything at once. By focusing on today, and not the entire road ahead, you rebuild confidence, emotional balance, and self-trust.</p>
+                <p>Feeling exhausted, uncertain, and pulled in all sorts of different directions does not mean you are failing. It means you are growing. Slow your thinking and ground yourself in the fact that you are still here. Take life in manageable pieces instead of trying to solve everything at once. By focusing on today, and not the entire road ahead, you can rebuild confidence, emotional balance, and self-trust.</p>
             </div>
         </div>
 
@@ -59,7 +62,7 @@
             <a href="https://open.spotify.com/track/3B7cm8w1IAfOfgQHFvAsft" target="_blank"><img src="images/tracks/track4_KeepItUp.png" alt="Keep It Up - Good Neighbours"></a>
             <div class="track-content">
                 <h2>Keep It Up - Good Neighbours</h2><br>
-                <p>Stop wasting energy on blame and start putting it back into yourself. Getting stuck in your head, falling behind, or feeling overwhelmed does not mean you are failing. It means you are human. Keep moving. Keep trying. Kkeep showing up, even when progress feels small or invisible. Take responsibility without self attacking. Accept pressure without letting it crush you. Choose effort over excuses.</p>
+                <p>Stop wasting energy on blame and start putting it back into yourself. Getting stuck in your head, falling behind, or feeling overwhelmed does not mean you are failing. It means you are human. Keep moving. Keep trying. Kkeep showing up, even when progress feels small or invisible. Take responsibility without attacking yourself. Accept pressure without letting it crush you. Choose effort over excuses.</p>
             </div>
         </div>
 
@@ -67,7 +70,7 @@
             <a href="https://open.spotify.com/track/6me7F0aaZjwDo6RJ5MrfBD" target="_blank"><img src="images/tracks/track5_Evergreen.png" alt="Evergreen - Richy Mitch & Thee Coal Miners"></a>
             <div class="track-content">
                 <h2>Evergreen - Richy Mitch & Thee Coal Miners</h2><br>
-                <p>Recognize when you are stuck because of internal resistance rather than external limits. Feeling trapped often comes from a battle for control inside your own mind, not from a lack of options. By grounding yourself and trusting your inner direction, you begin to move again instead of freezing in place. This mindset supports rebuilding by shifting you from passive waiting to intentional action. When you stop wrestling with yourself and start choosing direction, even small steps restore confidence, momentum, and a sense of personal agency.</p>
+                <p>Recognize when you are stuck because of internal problems rather than external ones. Feeling trapped often comes from a battle for control inside your own mind, not from a lack of options. By grounding yourself and trusting your inner direction, you begin to move again instead of freezing in place. This mindset supports rebuilding by shifting you from passive waiting to intentional action. When you stop wrestling with yourself and start choosing direction, even small steps restore confidence.</p>
             </div>
         </div>
 
@@ -75,7 +78,7 @@
             <a href="https://open.spotify.com/track/0pqnGHJpmpxLKifKRmU6WP" target="_blank"><img src="images/tracks/track6_Believer.png" alt="Believer - Imagine Dragons"></a>
             <div class="track-content">
                 <h2>Believer - Imagine Dragons</h2><br>
-                <p>Face hardship head on and stop letting the past define you. Take ownership of your life, your choices, and your future. You stop waiting for permission, stop letting others decide who you are, and start steering your own direction. Pain is not something to avoid. Tt is something to use. Every setback, rejection, and failure becomes fuel that strengthens you instead of breaking you. When you accept that struggle is part of growth, you rebuild yourself with purpose. Learn from what hurt you. Turn frustration into focus. Transform doubt into drive. Believe in yourself and keep moving forward even when it's uncomfortable. If you commit to this mindset, you come out stronger, clearer, and more determined to become the best version of yourself.</p>
+                <p>Face hardships head-on and stop letting the past define you. Take ownership of your life, your choices, and your future. Stop waiting for permission, stop letting others decide who you are, and start choosing your own direction. Pain is not something to avoid. Tt is something to use. Every setback, rejection, and failure becomes fuel that strengthens you instead of breaking you. When you accept that struggle is part of growth, you rebuild yourself with purpose. Learn from what hurt you. Turn frustration into focus. Transform doubt into drive. Believe in yourself and keep moving forward even when it's uncomfortable. If you commit to this mindset, you come out stronger, clearer, and more determined to become the best version of yourself.</p>
             </div>
         </div>
 
@@ -83,23 +86,23 @@
             <a href="https://open.spotify.com/track/6Qn5zhYkTa37e91HC1D7lb" target="_blank"><img src="images/tracks/track7_WhateverItTakes.png" alt="Whatever It Takes - Imagine Dragons"></a>
             <div class="track-content">
                 <h2>Whatever It Takes - Imagine Dragons</h2><br>
-                <p>The world is loud, critical, and ready to doubt you, but you are not here to shrink or wait for approval. You are here to do whatever it takes and push through discomfort. Fear, pressure, and exhaustion are not warnings to stop; they are signs that you are breaking limits. Embrace challenge instead of avoiding it, to accept being uncomfortable if it means becoming stronger. You stop chasing perfection and start chasing progress. You understand that growth requires being tested, reshaped, and sometimes broken down so you can rebuild better. You choose effort over excuses and action over fear. When you commit fully, stop playing small, and decide to do what it takes, you build confidence, resilience, and purpose. You become someone who does not quit when things get hard, but rises because they are hard.</p>
+                <p>The world is loud, critical, and ready to doubt you, but you are not here to shrink or wait for approval. You are here to do whatever it takes and push through discomfort. Fear, pressure, and exhaustion are not warnings to stop; they are signs that you are breaking limits. Embrace challenge instead of avoiding it. Accept being uncomfortable if it means becoming stronger. Stop chasing perfection and start chasing progress. You understand that growth requires being tested, reshaped, and sometimes broken down so you can rebuild better. When you fully commit and decide that you WILL do whatever it takes, you build confidence, resilience, and purpose. You become someone who does not quit when things get hard, but rises because they are hard.</p>
             </div>
         </div>
 
-        <div class="track">
+        <!-- <div class="track">
             <a href="https://open.spotify.com/track/77KnJc8o5G1eKVwX5ywMeZ" target="_blank"><img src="images/tracks/track8_MindOverMatter.png" alt="Mind Over Matter - Young The Giant"></a>
             <div class="track-content">
                 <h2>Mind Over Matter - Young The Giant</h2><br>
                 <p>Description Coming Soon.</p>
             </div>
-        </div>
+        </div> -->
 
         <div class="track">
             <a href="https://open.spotify.com/track/2RSOPh3dQYXIf4v17UTit3" target="_blank"><img src="images/tracks/track9_StraightAndNarrow.png" alt="Straight and Narrow - Sam barber"></a>
             <div class="track-content">
                 <h2>Straight and Narrow - Sam barber</h2><br>
-                <p>Description Coming Soon.</p>
+                <p>Stand up. Do it even when your chest feels heavy and your mind is loud. Do it when the past tries to pull you backward and fear is breathing down your neck. Keep your eyes forward and your feet moving. Choose the harder path because it's the one that builds you. Leave yesterday where it belongs. You are not here to be chased, cornered, or defined by what came before. You are here to endure, to act with discipline, and to become stronger by refusing to quit when pressure closes in.</p>
             </div>
         </div>
 
@@ -107,7 +110,7 @@
             <a href="https://open.spotify.com/track/213x4gsFDm04hSqIUkg88w" target="_blank"><img src="images/tracks/track10_OnTopOfTheWorld.png" alt="On Top Of The World - Imagine Dragons"></a>
             <div class="track-content">
                 <h2>On Top Of The World - Imagine Dragons</h2><br>
-                <p>Description Coming Soon.</p>
+                <p>Keep going. Do not rush the climb and do not cheapen it by looking for shortcuts. You earn strength by staying in the work when it's uncomfortable, by standing back up when the fall knocks the air out of you, and by trusting that patience compounds. Let progress speak louder than doubt. Take responsibility for the distance you've traveled and carry that momentum forward. This is your reminder that consistency wins, effort matters, and the life you want is built step by step. So stand tall, move forward, and don't look down.</p>
             </div>
         </div>
 
@@ -115,7 +118,7 @@
             <a href="https://open.spotify.com/track/6VS7wKwtvL2FvTupYSWZ9e" target="_blank"><img src="images/tracks/track11_Invincible.png" alt="Invincible - Aminé"></a>
             <div class="track-content">
                 <h2>Invincible - Aminé</h2><br>
-                <p>Description Coming Soon.</p>
+                <p>Stop waiting to be seen. Decide that you matter and move like it's already true. Carry your people forward, but do not slow your stride to make yourself smaller. When doubt tells you the dream is impossible, answer it with work. Choose momentum over comfort. Choose belief even when it feels unnatural. You are not here to blend in, you are here to rise up and keep pushing until confidence is no longer a feeling but a habit.</p>
             </div>
         </div>
 
@@ -123,7 +126,7 @@
             <a href="https://open.spotify.com/track/1zB4vmk8tFRmM9UULNzbLB" target="_blank"><img src="images/tracks/track12_Thunder.png" alt="Thunder - Imagine Dragons"></a>
             <div class="track-content">
                 <h2>Thunder - Imagine Dragons</h2><br>
-                <p>Description Coming Soon.</p>
+                <p>Stop shrinking to fit rooms that were never built for you. Take the doubt, the laughter, the silence, and turn it into momentum. Move first. Work louder than your excuses. You don't need permission, approval, or a seat in the back. Commit to your vision and let consistency do the talking. Be relentless, not reactive. When the moment comes, don't just arrive. Arrive undeniable.</p>
             </div>
         </div>
 
@@ -131,7 +134,7 @@
             <a href="https://open.spotify.com/track/1sx0XsWUusUoPstbvokZjP" target="_blank"><img src="images/tracks/track13_AOK.png" alt="AOK - Tai Verdes"></a>
             <div class="track-content">
                 <h2>AOK - Tai Verdes</h2><br>
-                <p>Description Coming Soon.</p>
+                <p>Lift your head. When life hits, respond with intention instead of panic. You don't need perfect clarity to keep moving, just the discipline to turn problems into fuel and refuse to spiral. Shake off the noise, steady your breathing, and choose progress anyway. Confidence isn't pretending nothing hurts; it's knowing you'll handle it when it does. Stay light, stay moving, and trust yourself to adapt. You will be okay if you keep showing up.</p>
             </div>
         </div>
  
@@ -139,7 +142,7 @@
             <a href="https://open.spotify.com/track/6OtCIsQZ64Vs1EbzztvAv4" target="_blank"><img src="images/tracks/track14_GoodLife.png" alt="Good Life - OneRepublic"></a>
             <div class="track-content">
                 <h2>Good Life - OneRepublic</h2><br>
-                <p>Description Coming Soon.</p>
+                <p>Pause and take inventory. You don't need a perfect plan to live well. You need awareness. Let the noise quiet down long enough to recognize what's already working, then protect it. Stop feeding complaints and start reinforcing gratitude. Be present, absorb the moment, and use that clarity to move forward with intention. A good life isn't handed to you. A good life is built by noticing, choosing, and committing to what matters to you while the time is yours.</p>
             </div>
         </div>
 
