--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <h1><a href="index.html">Self Improvement Through Music</a></h1>
         <nav>
             <a href="index.html">Home</a>
-            <a href="tracklist.html">Playlist</a>
-            <a href="help.html">Media</a>
+            <a href="playlist.html">Playlist</a>
+            <a href="media.html">Media</a>
             <a href="recommendations.html">Recommendations</a>
         </nav>
     </header>
