--- a/media.html
+++ b/media.html
@@ -54,6 +54,17 @@
             </div>
         </section><br><br>
 
+        <section class="movies">
+            <h1>Movies</h1><br>
+            <div class="movie">
+                <a href="https://letterboxd.com/film/the-pursuit-of-happyness/" target="_blank"><img src="images/movies/movie1_ThePursuitOfHappyness.png" alt="The Pursuit Of Happyness - Gabriele Muccino"></a>
+                <div class="video-content">
+                    <h2>The Pursuit Of Happyness - Gabriele Muccino</h2><br>
+                    <p></p>
+                </div>
+            </div>
+        </section><br><br>
+
         <h1>Quotes</h1><br>
         <p>It ain't what you don't know that gets you into trouble. It's what you know for sure that just ain't so - Mark Twain</p>
     </main>
