added movie description

--- a/media.html
+++ b/media.html
@@ -60,7 +60,7 @@
                 <a href="https://letterboxd.com/film/the-pursuit-of-happyness/" target="_blank"><img src="images/movies/movie1_ThePursuitOfHappyness.png" alt="The Pursuit Of Happyness - Gabriele Muccino"></a>
                 <div class="video-content">
                     <h2>The Pursuit Of Happyness - Gabriele Muccino</h2><br>
-                    <p></p>
+                    <p>The Pursuit of Happyness is a grounded reminder that progress is built through persistence, not luck. It shows what happens when discipline replaces excuses and commitment outlasts comfort. The film challenges you to take responsibility under pressure, keep moving when results are invisible, and protect your belief in yourself even when circumstances offer no reassurance. It's not about shortcuts or motivation. It's about showing up every day, doing the work, and earning a better future step by step.</p>
                 </div>
             </div>
         </section><br><br>
