--- a/media.html
+++ b/media.html
@@ -47,9 +47,10 @@
         <section class="videos">
             <h1>Videos</h1><br>
             <div class="video">
-                <a href="https://www.youtube.com/watch?v=jMl73_lW5HY" target="_blank"><img src="images/videos/video1_BeatOverthinking.png" alt=""></a>
+                <iframe width="300" height="200" src="https://www.youtube.com/embed/jMl73_lW5HY" title="It took me 3 years to beat overthinking. I&#39;ll tell you how to in 5 steps" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 <div class="video-content">
                     <h2>It took me 3 years to beat overthinking. I'll tell you how to in 5 steps - Clark Kegley</h2><br>
+                    <p>This video is about breaking free from overthinking and finally taking action. It explains why thinking more doesn't solve the problem, and why doing something, even if it's small or imperfect, is what actually creates change. You'll learn how to slow your mind, stop putting pressure on yourself to be perfect, and build confidence by taking simple steps forward. If you feel stuck in your head, afraid to start, or overwhelmed by trying to do everything “right,” this video shows you how to move forward anyway.</p>
                 </div>
             </div>
         </section><br><br>
