--- a/media.html
+++ b/media.html
@@ -22,6 +22,22 @@
     </header>
 
     <main>
+
+        <h1>Media Collection</h1><br>
+
+        <p>This page is a collection of media meant to help you grow.</p>
+
+        <p>Everything here (podcasts, books, videos, movies, and quotes) is focused on:</p>
+        <ul>
+            <li>Building better habits</li>
+            <li>Having a stronger mindset</li>
+            <li>Long-term self improvement</li>
+        </ul><br>
+
+        <p>You don't need to consume it all. Use this page as a resource, not a checklist.</p>
+
+        <p>Explore what resonates with you, apply what's useful, and move forward at your own pace.</p><br>
+
         <section class="podcasts">
             <H1>Podcasts</H1><br>
             <div class="podcast">
