--- a/playlist.html
+++ b/playlist.html
@@ -23,6 +23,8 @@
 
     <main>
 
+        <h1>Playlist</h1><br>
+
         <p><i>*You can navigate to any song by clicking on the album cover.</i></p>
 
         <div class="track">
