--- a/recommendations.html
+++ b/recommendations.html
@@ -22,7 +22,57 @@
     </header>
 
     <main>
-        <p>Coming soon. This page will allow users to send recommendations for songs, podcasts, books, quotes and more.</p>
+
+        <section class="recommendation-form">
+
+            <h1>Recommendations</h1><br>
+
+            <p>This page exists so you can suggest additions that may help others move forward.</p>
+
+            <p>All recommendations are reviewed carefully. Songs are analyzed for emotional impact, lyrical themes, and whether they support growth rather than escapism. Media submissions are evaluated for long-term value, mindset alignment, and practical usefulness.</p>
+
+            <p>Not every request will be added. This is intentional.</p><br><br>
+
+            <h2>Submit a Recommendation</h2><br>
+
+            <form name="recommendations" method="POST" data-netlify="true">
+            <input type="hidden" name="form-name" value="recommendations">
+
+                <fieldset>
+
+                    <label for="type"><strong>What are you recommending?</strong></label><br>
+                    <select id="type" name="type" required>
+                        <option value="">-- Select an option --</option>
+                        <option value="song">Song (Playlist)</option>
+                        <option value="media">Media (Podcast, Book, Video, Movie, Quote)</option>
+                        <option value="other">Other</option>
+                    </select><br><br>
+
+                    <label for="title"><strong>Title / Name</strong></label><br>
+                    <input type="text" id="title" name="title" required><br><br>
+
+                    <label for="creator"><strong>Artist / Author / Creator (if applicable)</strong></label><br>
+                    <input type="text" id="creator" name="creator"><br><br>
+
+                    <label for="email"><strong>Your Email Address</strong></label><br>
+                    <input type="email" id="email" name="email" required><br><br>
+
+                    <label for="reason"><strong>Why should this be added?</strong></label><br>
+                    <p>Explain how this helped you and why it supports self-improvement, growth, or rebuilding.</p>
+                    <textarea id="reason" name="reason" rows="6" required></textarea><br><br>
+
+                    <button type="submit">Submit Recommendation</button>
+
+                </fieldset>
+
+            </form>
+
+            <br><br>
+
+            <p><i>*Song submissions are reviewed line by line. Media submissions are reviewed for emotional impact, clarity, and long-term usefulness. If a recommendation reinforces avoidance, fixation, false reassurance, it will not be added.</i></p>
+
+        </section>
+
     </main>
 
     <footer>
