--- a/recommendations.html
+++ b/recommendations.html
@@ -35,8 +35,7 @@
 
             <h2>Submit a Recommendation</h2><br>
 
-            <form name="recommendations" method="POST" data-netlify="true">
-            <input type="hidden" name="form-name" value="recommendations">
+            <form name="recommendations" netlify>
 
                 <fieldset>
 
