--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <header>
-        <h1><a href="index.html">Self Improvement Through Music</a></h1>
+        <h1><a href="index.html">Self-Improvement Through Music</a></h1>
         <nav>
             <a href="index.html">Home</a>
             <a href="playlist.html">Playlist</a>
@@ -23,126 +23,74 @@
 
     <main>
 
-        <h1>Find Peace Through Music Without Escaping Reality</h1><br>
 
-        <p>This website exists for anyone going through a difficult time who turns to music for support.</p>
+        <section class="hero">
+            <h1>Self-Improvement Through Music</h1><br>
+            <p><strong>Music curated to support growth, not escapism.</strong></p>
+            <p>This site exists to help you use music and media intentionally to stay grounded, rebuild yourself, and move forward without feeding false hope or avoidance.</p>
+        </section>
 
-        <p>Breakups. Anxiety. Loneliness. Confusion. Anger. Loss. Burnout. Everyone goes through something. Music can
-            help you move forward, or quietly keep you stuck.</p>
-
-        <p>This project is about using music <strong>intentionally</strong>, so it supports growth instead of
-            reinforcing pain.</p><br><br>
-
-        <h2>When Music Helps - And When It Hurts</h2><br>
-
-        <p>Music is powerful because it speaks directly to emotion, not logic. That power can work against you.</p>
-
-        <p>After a breakup especially, much of popular music becomes dangerous:</p>
-
-        <ul>
-            <li>Love songs that reinforce attachment</li>
-            <li>Lyrics that imply reconciliation</li>
-            <li>Narratives that suggest everything will work out</li>
-        </ul><br>
-
-        <p>These songs can place you in a mental <em>dream state</em>. You feel hopeful, comforted, even excited. But
-            that hope is tied to an outcome that may not exist. When reality contradicts that story, the suffering is
-            worse.</p>
-
-        <p>This isn't weakness. It's conditioning.</p>
-
-        <p>Thought creates emotion. Emotion fuels suffering.</p>
-
-        <p>This idea closely aligns with the philosophy in <em>Don't Believe Everything You Think</em> by Joseph Nguyen
-            - suffering does not come from events themselves, but from the thoughts we replay about them.</p>
-
-        <p>Music influences those thoughts.</p><br><br>
-
-        <h2>A Healthier Way to Use Music</h2><br>
-
-        <p>This project follows a simple two-phase approach.</p>
-
-        <h3>1. Feel Your Emotions - Honestly</h3>
-
-        <p>Emotionally connected music has a place. Suppressing emotions slows healing. You need to feel sadness, anger,
-            grief, or confusion without judgment.</p>
-
-        <h3>2. Rebuild - Intentionally</h3>
-
-        <p>Once emotions have been felt, shift your focus.</p>
-
-        <p>The music featured here avoids:</p>
-
-        <ul>
-            <li>Romantic fixation</li>
-            <li>False reassurance</li>
-            <li>Outcome-based fantasies</li>
-        </ul><br>
-
-        <p>Instead, it focuses on:</p>
-
-        <ul>
-            <li>Self-improvement</li>
-            <li>Personal growth</li>
-            <li>Persistence</li>
-            <li>Rebuilding identity</li>
-            <li>Forward motion</li>
-        </ul><br>
-
-        <p>This music is still emotional, just not destructive.</p>
-
-        <p>It doesn't deny pain. It doesn't feed the story that keeps you stuck.</p><br><br>
-
-        <h2>What This Site Is And Is Not</h2><br>
-
-        <p><strong>This site is:</strong></p>
-
-        <ul>
-            <li>A guide to understanding the music you listen to</li>
-            <li>A curated playlist focused on growth, not escapism</li>
-            <li>An explanation of <em>why</em> certain songs help</li>
-        </ul><br>
-
-        <p><strong>This site is not:</strong></p>
-
-        <ul>
-            <li>Therapy</li>
-            <li>A replacement for professional help</li>
-            <li>A promise that everything will be okay</li>
-        </ul><br>
-
-        <p>If you are in crisis or need immediate help, support resources are clearly listed below in the footer.</p>
         <br><br>
 
-        <h2>How to Use This</h2><br>
+        <section class="what-this-is">
+            <h2>What This Is</h2><br>
+            <p>This is a curated collection of music and media chosen for one purpose: supporting self-improvement during difficult periods of life.</p>
+            <p>Everything here is selected and reviewed manually. Nothing is added automatically. Each song or resource is included because it encourages responsibility, stability, persistence, and forward motion.</p>
+        </section>
 
-        <p>Each song on the playlist includes a description explaining:</p>
+        <br><br>
 
-        <ul>
-            <li>The mindset it encourages</li>
-            <li>How it supports rebuilding</li>
-        </ul><br>
+        <section class="why-this-exists">
+            <h2>Why This Exists</h2><br>
+            <p>Music has a direct influence on thought and emotion. When used carelessly, it can reinforce fixation, fantasy, or avoidance - especially during emotional stress.</p>
+            <p>This project exists to make it easier to choose music that helps you accept reality, regulate emotion, and rebuild yourself instead of staying mentally stuck.</p>
+        </section>
 
-        <p>Listen with awareness.</p><br><br>
+        <br><br>
 
-        <h2>The Goal</h2><br>
+        <section class="how-to-use-this">
+            <h2>How To Use This</h2><br>
+            <ul>
+                <li>Listen with awareness, not on autopilot</li>
+                <li>Use the media section as a resource, not a checklist</li>
+                <li>Take what helps and ignore what doesn't</li>
+            </ul>
+        </section>
 
-        <p>Peace does not mean feeling good all the time. It means getting out of your own head.</p>
+        <br><br>
 
-        <p>It means not letting thoughts keep you attached to outcomes you cannot control.</p>
+        <section class="target-audience">
+            <h2>Who This Is - And Isn't - For</h2><br>
 
-        <p>Success here is simple: If you feel even slightly more grounded, this has done its job.</p><br><br>
+            <p><strong>This site is for people who:</strong></p>
+            <ul>
+                <li>Want to improve themselves honestly</li>
+                <li>Use music as a tool, not an escape</li>
+                <li>Are rebuilding focus, identity, or discipline</li>
+            </ul>
 
-        <h2>Why This Exists</h2><br>
+            <br>
 
-        <p>This project exists because uplifting music without emotional triggers is difficult to find - especially
-            after heartbreak.</p>
+            <p><strong>This site is not for people who:</strong></p>
+            <ul>
+                <li>Want reassurance about what they can't control</li>
+                <li>Want to numb emotions or avoid reality</li>
+                <li>Are looking for motivation without effort</li>
+            </ul>
+        </section>
 
-        <p>It's easy to listen to music that reflects what you <em>want</em> to happen.</p>
+        <br><br>
 
-        <p>It's harder to choose music that helps you accept what <em>is</em> and rebuild anyway.</p>
-
-        <p>This exists to make that choice easier.</p>
+        <section class="important-note">
+            <h2>Important Note</h2><br>
+            <p>
+                This project is <strong>not</strong> therapy and it is <strong>not</strong> a replacement for professional help.
+                It is a personal, experience-based resource created to support intentional growth.
+            </p>
+            <p>
+                If you are in crisis or need immediate help, support resources are listed below.
+            </p>
+        </section>
 
     </main>
 
