--- a/playlist.html
+++ b/playlist.html
@@ -12,7 +12,7 @@
 <body>
 
     <header>
-        <h1><a href="index.html">Self Improvement Through Music</a></h1>
+        <h1><a href="index.html">Self-Improvement Through Music</a></h1>
         <nav>
             <a href="index.html">Home</a>
             <a href="playlist.html">Playlist</a>
@@ -23,14 +23,16 @@
 
     <main>
 
+        <h1>Playlist</h1><br>
+
         <p><i>*You can navigate to any song by clicking on the song/album cover.</i></p>
 
         <div class="track">
             <a href="https://open.spotify.com/playlist/0J2ZEWTzSlYikVtd5M0yNz" target="_blank"><img src="images/tracks/playlist.png" alt="Self Improvement - Grady Algire"></a>
             <div class="track-content">
                 <h2>You can find the playlist on Spotify <a href="https://open.spotify.com/playlist/0J2ZEWTzSlYikVtd5M0yNz" target="_blank">here</a>.</h2><br>
-                <p>You do not need to connect with every song here. Choose the ones that resonate with you and stick with them. If you find a song that supports your growth and isn't on this playlist, submit a new song request on the recommendations page for consideration.</p>
-                <p><i>*Tracklist subject to change as the project evolves.</i></p>
+                <p>You do not need to connect with every song. Choose the ones that resonate with you and stick with them. If you find a song that supports your growth and isn't on this playlist, submit a new song request on the recommendations page for consideration.</p>
+                <p><i>*Playlist subject to change as the project evolves. Songs are not in any particular order.</i></p>
             </div>
         </div>
 
